// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COffcanvasBody customize 1`] = `
<div>
  <div
    class="offcanvas-body bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays COffcanvasBody component 1`] = `
<div>
  <div
    class="offcanvas-body"
  />
</div>
`;
